# xous-signal-client

./: .gitignore  .size-budget.toml  AGENTS.md  ARCHITECTURE.md  ATTRIBUTION.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT-PLAN.md  README.md  TESTING-PLAN.md
.cargo/: config.toml
.github/actions/setup-xous/: action.yml
.github/scripts/: check_size_budget.py
.github/workflows/: size-budget.yml  size-delta.yml
docs/decisions/: 0001-hand-rolled-libsignal-protocol-orchestration.md  0002-datamessage-canonical-proto-field-tags.md  0003-multi-device-send-fan-out.md  0004-sync-transcripts.md  0005-testing-methodology-three-legged-stool-statefulmockhttp.md  0006-known-fail-test-status-convention.md  0007-diagnostic-instrumentation-committed-env-var-gated.md  0008-pddb-protocol-stores-schema.md  0009-worker-thread-websocket-pattern-c.md  0010-outbound-datamessage-omits-profilekey.md  0011-affirm-hand-rolled-with-stop-loss-criteria.md  0012-conversation-list-via-modals.md  0013-prekey-replenishment.md
docs/research/: concurrency-architecture.md  memory-budget.md  ui-conversation-list.md
imports/getrandom-02/: Cargo.toml
imports/getrandom-02/src/: lib.rs
locales/: i18n.json
src/: account.rs  api.rs  getrandom_xous.rs  lib.rs  main.rs  manager.rs
src/account/: service_environment.rs
src/manager/: account_attrs.rs  config.rs  group_permission.rs  libsignal.rs  link_state.rs  main_ws.rs  outgoing.rs  peers.rs  prekey_replenish.rs  prekeys.rs  rest.rs  send.rs  signal_ws.rs  stores.rs  trust_mode.rs  ws_server.rs
tests/: README.md  known-issues.md
tests/renode/: README.md  pddb-format.robot
tools/: decode-wire.sh  demo-prep.sh  measure-renode.sh  measure-size.sh  run-all-tests.sh  scan-receive.sh  scan-send.sh  test-env.example  test-helpers.sh
tools/ui-driving/: README.md  autodrive_qr.py  continue_to_link.py  navigate_to_link.py  start_and_navigate.sh
